# COSC1295_Ozlympics

./: CMakeLists.txt  main.cpp
games/: game.cpp  game.hpp
persons/: person.cpp  person.hpp
persons/athletes/: athlete.cpp  athlete.hpp  cyclist.cpp  cyclist.hpp
support/: data.cpp  data.hpp  util.cpp  util.hpp
